Resolve comentários de code review do PR #1
- ConfigurationProperties: AnthropicProperties e OpenAiProperties com @Validated,
  @NotBlank e @Positive substituindo validações manuais nos clients
- ai.provider, model e max-tokens configuráveis via variáveis de ambiente com fallback
- Credenciais e URL do PostgreSQL lidas de variáveis de ambiente com fallback
- Provider renomeado de "claude" para "anthropic"
- IbptConstants: interface Csv → CsvColumn, prefixo COLUNA_ removido
- CsvIbptParser: decimal → toDecimal, date → parseDate
- JsonIbptParser: falha silenciosa substituída por IllegalArgumentException
- IbptRepositoryCustomImpl: setValues refatorado com Arrays.asList + for
- IbptSyncServiceImpl: catch(Exception) → catch(RuntimeException)
- PriceCalculatorServiceImpl: estadual → state, magic number 6 → RATE_SCALE
- IbptSyncControllerImpl: constante ENTRIES_SYNCED extraída
- Criada AiClientException para erros dos clients de IA
- spring-boot-configuration-processor e spring-boot-starter-validation adicionados ao pom

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>